Fixed overzealous overflow

--- a/css/all.css
+++ b/css/all.css
@@ -181,7 +181,7 @@ p + p {
 figure,
 iframe {
   margin: 1.5em 0;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 figure {
   text-align: center;
